part-1/ex_1.08_pr_v0.5/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
        - name: simple-server
          image: tryfonm/simple-server:v1.08
