part-1/ex_1.08_pr_v0.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-server-svc
spec:
  type: ClusterIP
  selector:
    app: simple-server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
